<resources>
    <string name="app_name">BookStore</string>
    <string name="enter_book_name">Enter Book Name</string>
    <string name="enter_author_name">Enter Author Name</string>
    <string name="enter_book_quantity">Enter Book Quantity</string>
    <string name="enter_publisher_name">Enter Publisher Name</string>
    <string name="enter_edition">Enter Edition</string>
    <string name="enter_country_name">Enter Country Name</string>
    <string name="enter_language">Enter Language</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign up</string>
    <string name="add_book_info">Add Book Info</string>
    <string name="add_publisher_info">Add Publisher Info</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_store_name">Enter Store Name</string>
    <string name="submit">Submit</string>
    <string name="book_list">Book List</string>
    <string name="publisher_list">Publisher List</string>
    <string name="sales_details">Sales List</string>
    <string name="user_details">User Details</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="book_name">Book name</string>
    <string name="author_name">Author name</string>
    <string name="edition">Edition</string>
    <string name="publisher">Publisher</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="language">Language</string>
    <string name="add_book_information">Add book Information</string>
    <string name="update">Update</string>
    <string name="enter_publisher_address">Enter Publisher Address</string>
    <string name="edit_user_information">Edit user information</string>
</resources>
