<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#91bbfd"
    tools:context="com.bitm.rc.bookstore.ProfileActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
       <Button
           android:id="@+id/totalStockTv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:layout_weight="1"
           android:textAllCaps="false"

           android:background="#0c1fae"
           android:padding="5dp"
           android:textStyle="bold"
           android:textColor="#fdfcfc"/>
       <Button
           android:id="@+id/totalItemTv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:layout_weight="1"
           android:textAllCaps="false"

           android:layout_marginLeft="10dp"
           android:background="#0c1fae"
           android:padding="5dp"
           android:textStyle="bold"
           android:textColor="#fdfcfc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/totalSalesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAllCaps="false"

            android:background="#0c1fae"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="#fdfcfc"/>
        <Button
            android:id="@+id/totalRemainingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="Remaining Stock"
            android:background="#0c1fae"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="#fdfcfc"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        android:padding="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_publisher_info"
            android:padding="5dp"
            android:paddingHorizontal="20dp"
            android:onClick="gotoPublisherInfo"
            android:background="#0c1fae"
            android:textStyle="bold"
            android:textColor="#fdfcfc"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_book_info"
            android:textSize="20sp"
            android:padding="5dp"
            android:paddingHorizontal="20dp"
            android:onClick="gotoBookInfo"
            android:background="#0c1fae"
            android:textStyle="bold"
            android:textColor="#fdfcfc"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/book_list"
            android:onClick="bookInfoList"
            android:background="#0c1fae"
            android:paddingHorizontal="34dp"
            android:textStyle="bold"
            android:textColor="#fdfcfc"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sales_details"
            android:onClick="salesInfoList"
            android:paddingHorizontal="37dp"
            android:paddingVertical="2dp"
            android:layout_marginTop="8dp"
            android:background="#0c1fae"
            android:textStyle="bold"
            android:textColor="#fdfcfc"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/user_details"
            android:onClick="userInfoList"
            android:background="#0c1fae"
            android:paddingHorizontal="30dp"
            android:paddingVertical="3dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="#fdfcfc"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>
